# reader3

./: .gitignore  README.md  pyproject.toml  server.py
.claude/: settings.json
templates/: export.html  flashcards.html  library.html  reader.html  vocabulary.html
