[project]
name = "reader3"
version = "0.1.0"
description = "Simple EPUB reader web app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "openai>=2.6.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "psycopg[binary]>=3.2.9",
    "uvicorn>=0.38.0",
]
